# multi-sdk-llm-notebooks

./: .gitignore  FINDINGS.md  IMPLICATIONS.md  README.md  pyproject.toml
data/: reviews.json
notebooks/: 01_function_calling.ipynb  01_function_calling.py  02_structured_output.ipynb  02_structured_output.py  03_prompt_caching.ipynb  03_prompt_caching.py  04_streaming.ipynb  04_streaming.py  05_agent_loop.ipynb  05_agent_loop.py  06_agent_loop_cached.ipynb  06_agent_loop_cached.py  07_native_runners.ipynb  07_native_runners.py
src/: agent_harness.py  bench.py  prompts.py
